--- a/kura/distrib/config/kura.build.properties
+++ b/kura/distrib/config/kura.build.properties
@@ -45,6 +45,7 @@ org.eclipse.kura.linux.command.version=1.0.400
 org.eclipse.kura.linux.net.version=1.0.500
 org.eclipse.kura.linux.sysv.provider.version=1.0.100
 org.eclipse.kura.linux.systemd.provider.version=1.0.100
+org.eclipse.kura.linux.snapctl.provider.version=1.0.100
 org.eclipse.kura.linux.debian.provider.version=1.0.100
 org.eclipse.kura.linux.redhat.provider.version=1.0.100
 org.eclipse.kura.linux.gpio.version=1.0.500
