--- a/kura/pom.xml
+++ b/kura/pom.xml
@@ -98,6 +98,7 @@
 
         <module>org.eclipse.kura.linux.sysv.provider</module>
         <module>org.eclipse.kura.linux.systemd.provider</module>
+        <module>org.eclipse.kura.linux.snapctl.provider</module>
 
         <module>org.eclipse.kura.linux.debian.provider</module>
         <module>org.eclipse.kura.linux.redhat.provider</module>
