--- a/kura/distrib/pom.xml
+++ b/kura/distrib/pom.xml
@@ -1899,6 +1899,22 @@
                                         <copy
                                             file="${project.build.directory}/plugins/org.eclipse.kura.ble.provider_${org.eclipse.kura.ble.provider.version}.jar"
                                             todir="${project.build.directory}/staging/target-definition/equinox_3.12.50/repository/plugins" />
+                                    <copy
+                                        file="${project.build.directory}/plugins/org.eclipse.kura.net.admin_${org.eclipse.kura.net.admin.version}.jar"
+                                        todir="${project.build.directory}/staging/target-definition/equinox_3.12.50/repository/plugins" />
+
+                                    <copy
+                                        file="${project.build.directory}/plugins/org.eclipse.kura.linux.net_${org.eclipse.kura.linux.net.version}.jar"
+                                        todir="${project.build.directory}/staging/target-definition/equinox_3.12.50/repository/plugins" />
+
+                                    <copy
+                                        file="${project.build.directory}/plugins/org.eclipse.kura.linux.debian.provider_${org.eclipse.kura.linux.debian.provider.version}.jar"
+                                        todir="${project.build.directory}/staging/target-definition/equinox_3.12.50/repository/plugins" />
+
+                                    <copy
+                                        file="${project.build.directory}/plugins/org.eclipse.kura.linux.snapctl.provider_${org.eclipse.kura.linux.snapctl.provider.version}.jar"
+                                        todir="${project.build.directory}/staging/target-definition/equinox_3.12.50/repository/plugins" />
+
                                         <copy
                                             file="${project.build.directory}/plugins/org.eclipse.kura.ble.ibeacon.provider_${org.eclipse.kura.ble.ibeacon.provider.version}.jar"
                                             todir="${project.build.directory}/staging/target-definition/equinox_3.12.50/repository/plugins" />
