--- a/kura/pom.xml
+++ b/kura/pom.xml
@@ -497,6 +497,27 @@
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.8</version>
                 <executions>
+                  <execution>
+                        <id>configure-proxies-for-eclipserun</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <touch file="${project.build.directory}/work/configuration/.settings/org.eclipse.core.net.prefs" mkdirs="true"/>
+                                <propertyfile file="${project.build.directory}/work/configuration/.settings/org.eclipse.core.net.prefs">
+                                    <entry key="eclipse.preferences.version" value="1"/>
+                                    <entry key="nonProxiedHosts" value="${http.nonProxyHosts}"/>
+                                    <entry key="org.eclipse.core.net.hasMigrated" value="true"/>
+                                    <entry key="proxyData/HTTP/hasAuth" value="false"/>
+                                    <entry key="proxyData/HTTP/host" value="${http.proxyHost}"/>
+                                    <entry key="proxyData/HTTP/port" value="${http.proxyPort}"/>
+                                    <entry key="systemProxiesEnabled" value="false"/>
+                                </propertyfile>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
                     <execution>
                         <id>verify-jdeps</id>
                         <phase>package</phase>
