--- a/kura/pom.xml
+++ b/kura/pom.xml
@@ -110,7 +110,7 @@
     </modules>
 
     <properties>
-        <tycho-version>0.26.0</tycho-version>
+        <tycho-version>1.3.0</tycho-version>
 
         <!-- SCM: Note that we are in the "kura" sub-dir here already -->
         <tycho.scmUrl>scm:git:ssh://github.com/eclipse/kura/kura</tycho.scmUrl>
@@ -414,6 +414,7 @@
                             <arch>x86</arch>
                         </environment>
                     </environments>
+                    <argLine>-Dhttp.proxyHost=10.10.10.1 -Dhttp.proxyPort=8222 -Dhttps.proxyHost=10.10.10.1 -Dhttps.proxyPort=8222</argLine>
                 </configuration>
             </plugin>
             <plugin>
